--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
+            android:name=".SuccessActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
             android:name=".FailureActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
