--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,10 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
