--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
         </activity>
+        <activity
+            android:name=".ViewScoresActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
     </application>
 
 </manifest>
