--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,8 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
@@ -50,5 +52,8 @@
             android:screenOrientation="landscape" >
         </activity>
     </application>
+
+    <uses-permission>
+    </uses-permission>
 
 </manifest>
